--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ p{
 
 .l-heading {
   font-size: 30px;
+  line-height: 1.2;
 }
 
 /* padding */
@@ -98,7 +99,9 @@ p{
 color: #fff;
 }
 
+#navbar .logo {
   float: left;
+  padding-top: 20px;
 }
 
 #navbar ul {
@@ -203,6 +206,7 @@ min-height: 100%;
 
 /* testimonials */
 #testimonials {
+  height: 100%;
   background: url('../img/test-bg.jpg') no-repeat center center/cover;
   padding-top: 100px;
 }
